--- a/termux-x11/src/main/res/layout/binding_launch_item.xml
+++ b/termux-x11/src/main/res/layout/binding_launch_item.xml
@@ -8,7 +8,7 @@
 
     <Button
         android:id="@+id/BLaunch_item"
-        android:layout_width="140dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:padding="0dp"
@@ -16,6 +16,17 @@
         android:maxLines="1"
         android:textColor="@color/colorWhite"
         android:visibility="gone" />
+
+<Button
+    android:id="@+id/toggle_tool_box2"
+    android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:padding="0dp"
+        android:text="@string/toolbox_button_text2"
+        android:maxLines="1"
+        android:textColor="@color/colorWhite"
+        android:visibility="visible" />
 
     <LinearLayout
         android:id="@+id/LConfigStartItems"
